@@ -1,3 +1,14 @@
+2019-06-21  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	Allow address == NULL in libbalsa_address_set_edit_entries() and
+	libbalsa_address_get_edit_widget()
+
+	because the address book editor uses that.
+
+	* libbalsa/address.c (libbalsa_address_set_edit_entries),
+	(libbalsa_address_get_edit_widget),
+	(libbalsa_address_new_from_edit_entries):
+
 2019-06-18  Albrecht Dreß  <albrecht.dress@arcor.de>
 
 	Fix crash using incomplete VCard items
